# mesa_shape_fingerprinter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  README.md  ToDo.md  gcovr.cfg.in  notes_on_performance_profiling.md
dependencies/svd/: CMakeLists.txt  README.txt  lq.cpp  reflections.cpp
dependencies/svd/libs/: CMakeLists.txt  ap.h
dependencies/svd/tests/: CMakeLists.txt  testsvdunit.cpp
doc/: CMakeLists.txt  Doxyfile.in
prototypes/v3000_sd_support/: pyproject.toml
prototypes/v3000_sd_support/src/sd_reader/: atom.py  bond.py  main.py  mol.py  mol_file_header.py  sd_reader.py  v2000_ctab_reader.py  v3000_ctab_reader.py
prototypes/v3000_sd_support/test/data/: l_alanine_from_jmol.sd  mrv_2102_from_rdkit.sd  mrv_2211-2_from_rdkit.sd  mrv_2211_from_rdkit.sd
src/: CMakeLists.txt  shape_fingerprints.cpp
src/HammerslyGeneral/: HammerslyGeneral.cpp  MakefileHammerslyGeneral  SConscript
src/HammerslySpheroid/: HammerslySpheroid.cpp
src/ShapeFingerprinter/: SConscript  mol_fingerprinter.cpp  mol_fingerprinter.h  shape_fingerprinter.cpp
src/ShapeFingerprinter/test/: SConscript  itest_performance.py  test_basics.py
src/ShapeRadius/: SConscript  ShapeRadius.cpp
src/ShapeRadius/test/: SConscript  test_basics.py
src/ShapeVolume/: SConscript
src/ShapeVolume/test/: test_basics.py
src/cli/: CMakeLists.txt
src/cli/align_monte/: CMakeLists.txt  align_monte.cpp  mol_aligner.cpp  mol_aligner.hpp  sdf_mol_aligner.cpp  sdf_mol_aligner.hpp  shared_types.hpp
src/cli/hammersley_general/: CMakeLists.txt  hammersley_general.cpp
src/cli/hammersley_spheroid/: CMakeLists.txt  hammersley_spheroid.cpp
src/cli/measures/: CMakeLists.txt  README.txt  SConscript  cosine_counts.cpp  cosine_counts.hpp  euclidean_counts.cpp  euclidean_counts.hpp  fingerprint_reader.cpp  fingerprint_reader.hpp  fp_decoder.hpp  measure_type_converter.cpp  measure_type_converter.hpp  measures_all.cpp  measures_count_nxn.cpp  measures_nxn.cpp  measures_pvm.cpp  measures_sfp_band.cpp  measures_shape_fp.cpp  measures_sim.cpp  tanimoto_counts.cpp  tanimoto_counts.hpp  tversky_counts.cpp  tversky_counts.hpp  usr_measures_main.cpp  usr_s_measure.cpp  usr_s_measure.hpp
src/cli/measures/example/: multicore_matrix_generation.py
src/cli/measures/find_diverse/: CMakeLists.txt  SConscript  find_diverse.cpp  fingerprint_reader.cpp  fingerprint_reader.hpp
src/cli/shape_feature_fingerprinter/: SConscript  feature_finder.cpp  feature_finder.h  feature_finder_factory.cpp  mol_fingerprinter.cpp  sdf_shape_fingerprinter.cpp  sdf_shape_fingerprinter.h  shape_fingerprinter.cpp
src/cli/shape_feature_fingerprinter/test/: SConscript  itest_performance.py  sffp_benchmark.py  testsupport.py
src/cli/shape_filter_by_radius/: shape_filter_by_radius.cpp
src/cli/shape_filter_by_radius/test/: test_basics.py
src/cli/shape_fingerprinter/: CMakeLists.txt  mol_fingerprinter.cpp  mol_fingerprinter.hpp  sdf_shape_fingerprinter.cpp  sdf_shape_fingerprinter.hpp  shape_fingerprinter.cpp  shared_types.hpp
src/cli/shape_fingerprinter/doc/: shape_fingerprinter.md
src/cli/shape_fingerprinter/example/: testscript.sh
src/cli/shape_radius/: ShapeRadius.cpp
src/cli/shape_volume/: CMakeLists.txt  shape_volume.cpp
src/hammersley_general/: CMakeLists.txt  hammersley_general.cpp
src/hammersley_spheroid/: CMakeLists.txt  MakefileHammerslySpheroid  SConscript  hammersley_spheroid.cpp
src/lib/: CMakeLists.txt  module.modulemap
src/lib/mesaac_arg_parser/: CMakeLists.txt
src/lib/mesaac_arg_parser/src/: arg_parser.cpp  value_converter.cpp
src/lib/mesaac_common/: CMakeLists.txt  Makefile  Makefile.solaris  SConscript  b32.cpp  b64.cpp  gzip.cpp
src/lib/mesaac_measures/: CMakeLists.txt  SConscript
src/lib/mesaac_mol/: CMakeLists.txt  SConscript  atom.cpp  bond.cpp  element_info.cpp  mol.cpp  sd_tag_map.cpp
src/lib/mesaac_shape/: .hgignore  CMakeLists.txt  SConscript  axis_aligner.cpp  fingerprinter.cpp  hammersley.cpp  vol_box.cpp
src/lib/mesaac_shape_eigen/: CMakeLists.txt  SConscript  axis_aligner.cpp  fingerprinter.cpp  hammersley.cpp  vol_box.cpp
src/lib/svd/: CMakeLists.txt  SConscript  bdsvd.cpp  bidiagonal.cpp  blas.cpp  qr.cpp  rotations.cpp  svd.cpp
src/shape_feature_fingerprinter/: .hgignore  feature_finder.h  mol_fingerprinter.cpp  mol_fingerprinter.h  sdf_shape_fingerprinter.h  shared_types.h  stub_feature_finder_factory.cpp
src/shape_feature_fingerprinter/.hg/: branchheads.cache  dirstate  hgrc  undo.dirstate
src/shape_feature_fingerprinter/_hghooks/: precommit
src/shape_feature_fingerprinter/test/: test_basics.py
src/shape_filter_by_radius/: SConscript
src/shape_filter_by_radius/test/: SConscript
src/shape_fingerprinter/: CMakeLists.txt  mol_fingerprinter.cpp  mol_fingerprinter.h  mol_fingerprinter.hpp  sdf_shape_fingerprinter.cpp  sdf_shape_fingerprinter.h  sdf_shape_fingerprinter.hpp  shape_fingerprinter.cpp
src/shape_fingerprinter/doc/: ShapeBase0.1.doc
src/shape_fingerprinter/example/: testscript.sh
src/shape_fingerprinter/test/: CMakeLists.txt  cmake_paths.py.in  test_basics.py  testsupport.py
src/shape_volume/: ShapeVolume.cpp
src/shape_volume/test/: SConscript
src/swift/: CMakeLists.txt
src/swift/MesaacSwift/: Atom.swift  Bond.swift  CMakeLists.txt  Position.swift  README.md  SDReader.swift  TypeAliases.swift  V2000SDReader.swift  mesaac_swift.swift
src/swift/MolViewer/: CGPoint+Extension.swift  CMakeLists.txt  ContentView.swift  ErrorsView.swift  MolOverlayView.swift  MolSceneBuilder.swift  MolSelectionMgr.swift  MolViewerApp.swift  MolViewerAppDocument.swift  RKPosition+Extension.swift  SDFUTType.swift  SingleMolView.swift  ViewTransform.swift  mol-viewer-Info.plist.in
src/swift/mesaac_swift/: CMakeLists.txt  Mol.swift  mesaac_swift.swift
src/swift/mol_demo/: CMakeLists.txt  mol_demo.swift
src/swift/mol_viewer/: ArcBall.swift  CMakeLists.txt  Camera.swift  ContentView.swift  Lights.swift  MolOverlayView.swift  MolSceneBuilder.swift  SDFUTType.swift  ViewTransform.swift  mol_viewerApp.swift  mol_viewerAppDocument.swift
(+432 files in other folders)
