[project]
name = "sd-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mitch Chapman", email = "mchapman87501@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sd-reader = "sd_reader.main:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
